{build,build_intermediate}_library rename
- prefix with "timemory_", i.e. timemory_build_library

--- a/.cmake-format.yaml
+++ b/.cmake-format.yaml
@@ -45,18 +45,7 @@ parse:
         COMMAND: '*'
         OPTIONS: '*'
         ENVIRONMENT: '*'
-    create_executable:
-      flags:
-        - INSTALL
-        - EXCLUDE_FROM_ALL
-      kwargs:
-        TARGET_NAME: '*'
-        HEADERS: '*'
-        SOURCES: '*'
-        PROPERTIES: '*'
-        LINK_LIBRARIES: '*'
-        INSTALL_DESTINATION: '*'
-    build_library:
+    timemory_build_library:
       flags:
         - PIC
         - NO_CACHE_LIST
@@ -90,7 +79,7 @@ parse:
         - INSTALL_INTERFACE
       kwargs:
         FILES: '*'
-    build_intermediate_library:
+    timemory_build_intermediate_library:
       flags:
         - USE_INTERFACE
         - USE_CATEGORY
