CTEST_PARALLEL_LEVEL
- Appveyor and CircleCI run parallel test
- add_timemory_google_test -> timemory_add_google_test
- Applied RUN_SERIAL to tests where approriate

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -155,6 +155,7 @@ jobs:
       - run:
           name: build
           command: >
+            export CTEST_PARALLEL_LEVEL=2 &&
             export CONTINUOUS_INTEGRATION=true &&
             export PATH="${HOME}/miniconda/bin:${PATH}" &&
             source activate &&
