--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -136,7 +136,7 @@ build_script:
   - ls
   - ps: |
       if ($env:BUILD_TESTING -eq "ON") {
-          iex "ctest --output-on-failure -C $env:CONFIG"
+          iex "ctest --output-on-failure -j 2 -C $env:CONFIG"
       }
   - ps: |
       if ($env:EXAMPLES -eq "ON") {
