--- a/source/tools/kokkos-connector/CMakeLists.txt
+++ b/source/tools/kokkos-connector/CMakeLists.txt
@@ -67,12 +67,13 @@ set(TIMEMORY_BUILD_KOKKOS_CONNECTORS
 #
 # Options
 #
-add_option(TIMEMORY_BUILD_KOKKOS_SAMPLE "Build sample test" OFF NO_FEATURE)
-add_option(TIMEMORY_BUILD_KOKKOS_CUDA_CONNECTORS
-           "Compile GPU connectors as CUDA if necessary" ON NO_FEATURE)
-add_option(TIMEMORY_BUILD_KOKKOS_CONFIG "Build various connector configurations" OFF)
-add_feature(TIMEMORY_BUILD_KOKKOS_CONNECTORS "List of connector configurations to build"
-            DOC)
+timemory_add_option(TIMEMORY_BUILD_KOKKOS_SAMPLE "Build sample test" OFF NO_FEATURE)
+timemory_add_option(TIMEMORY_BUILD_KOKKOS_CUDA_CONNECTORS
+                    "Compile GPU connectors as CUDA if necessary" ON NO_FEATURE)
+timemory_add_option(TIMEMORY_BUILD_KOKKOS_CONFIG "Build various connector configurations"
+                    OFF)
+timemory_add_feature(TIMEMORY_BUILD_KOKKOS_CONNECTORS
+                     "List of connector configurations to build" DOC)
 string(TOUPPER "${TIMEMORY_BUILD_KOKKOS_CONNECTORS}" _CONNECTORS)
 
 message(STATUS "")
@@ -240,7 +241,7 @@ endif()
 
 set(_AVAILABLE_CONNECTOR_CONFIGS "all")
 
-function(ADD_CONNECTOR_CONFIG _NAME)
+function(TIMEMORY_ADD_CONNECTOR_CONFIG _NAME)
     cmake_parse_arguments(CONNECTOR "GPU;DISABLE_COMPILE_OPTIONS" "CONDITION"
                           "COMPONENTS;TARGETS;DEFINITIONS;ENVIRONMENT" ${ARGN})
 
@@ -328,50 +329,50 @@ endfunction()
 
 # --------------------------------------------------------------------------------------##
 
-add_connector_config(
+timemory_add_connector_config(
     trip_count
     COMPONENTS trip_count
     TARGETS timemory::timemory-headers)
 
-add_connector_config(
+timemory_add_connector_config(
     timers
     COMPONENTS wall_clock cpu_clock cpu_util
     TARGETS timemory::timemory-headers)
 
-add_connector_config(
+timemory_add_connector_config(
     memory
     COMPONENTS peak_rss page_rss virtual_memory current_peak_rss
     TARGETS timemory::timemory-headers)
 
-add_connector_config(
+timemory_add_connector_config(
     timers_memory
     COMPONENTS wall_clock cpu_clock cpu_util peak_rss page_rss virtual_memory
     TARGETS timemory::timemory-headers)
 
-add_connector_config(
+timemory_add_connector_config(
     io
     CONDITION "UNIX AND NOT APPLE"
     COMPONENTS read_bytes read_char written_bytes written_char
     TARGETS timemory::timemory-headers)
 
-add_connector_config(
+timemory_add_connector_config(
     context_switch
     COMPONENTS priority_context_switch voluntary_context_switch
     TARGETS timemory::timemory-headers)
 
-add_connector_config(
+timemory_add_connector_config(
     gperftools DISABLE_COMPILE_OPTIONS
     CONDITION "${TIMEMORY_USE_GPERFTOOLS}"
     COMPONENTS gperftools_cpu_profiler gperftools_heap_profiler
     TARGETS timemory::timemory-gperftools)
 
-add_connector_config(
+timemory_add_connector_config(
     papi
     CONDITION "${TIMEMORY_USE_PAPI}"
     COMPONENTS papi_array_t
     TARGETS timemory::timemory-papi-component)
 
-add_connector_config(
+timemory_add_connector_config(
     cpu_roofline
     CONDITION "${TIMEMORY_USE_PAPI}"
     COMPONENTS cpu_roofline_flops
@@ -396,7 +397,7 @@ if(timemory_SOURCE_DIR)
 endif()
 
 # creates a normal connector config and a rates version
-function(add_papi_connector_config _NAME)
+function(TIMEMORY_ADD_PAPI_CONNECTOR_CONFIG _NAME)
     cmake_parse_arguments(CONNECTOR "" "" "COMPONENTS;TARGETS;DEFINITIONS;ENVIRONMENT"
                           ${ARGN})
     set(_ORIG_COMPONENTS "${CONNECTOR_COMPONENTS}")
@@ -422,7 +423,7 @@ function(add_papi_connector_config _NAME)
             )
         return()
     endif()
-    add_connector_config(
+    timemory_add_connector_config(
         ${_NAME}
         CONDITION "${TIMEMORY_USE_PAPI}"
         COMPONENTS ${CONNECTOR_COMPONENTS}
@@ -432,7 +433,7 @@ function(add_papi_connector_config _NAME)
         TARGETS timemory::timemory-papi)
     string(REPLACE "papi_tuple<" "papi_rate_tuple<wall_clock," CONNECTOR_COMPONENTS
                    "${CONNECTOR_COMPONENTS}")
-    add_connector_config(
+    timemory_add_connector_config(
         ${_NAME}_wall_rate
         CONDITION "${TIMEMORY_USE_PAPI}"
         COMPONENTS ${CONNECTOR_COMPONENTS}
@@ -445,93 +446,93 @@ function(add_papi_connector_config _NAME)
         PARENT_SCOPE)
 endfunction()
 
-add_papi_connector_config(
+timemory_add_papi_connector_config(
     cpu_flops
     COMPONENTS papi_tuple<PAPI_DP_OPS,PAPI_SP_OPS>
     TARGETS timemory::timemory-papi)
 
-add_papi_connector_config(
+timemory_add_papi_connector_config(
     cpu_instructions
     COMPONENTS papi_tuple<PAPI_TOT_INS,PAPI_LD_INS,PAPI_SR_INS>
     TARGETS timemory::timemory-papi)
 
-add_papi_connector_config(
+timemory_add_papi_connector_config(
     cpu_cache_misses
     COMPONENTS papi_tuple<PAPI_L1_TCM,PAPI_L2_TCM,PAPI_L3_TCM>
     TARGETS timemory::timemory-papi)
 
-add_papi_connector_config(
+timemory_add_papi_connector_config(
     cpu_tlb
     COMPONENTS papi_tuple<PAPI_TLB_DM,PAPI_TLB_IM,PAPI_TLB_TL,PAPI_TLB_SD>
     TARGETS timemory::timemory-papi)
 
-add_papi_connector_config(
+timemory_add_papi_connector_config(
     cpu_branching
     COMPONENTS
         papi_tuple<PAPI_BR_UCN,PAPI_BR_CN,PAPI_BR_TKN,PAPI_BR_NTK,PAPI_BR_MSP,PAPI_BR_PRC,PAPI_BR_INS>
     TARGETS timemory::timemory-papi)
 
-add_papi_connector_config(
+timemory_add_papi_connector_config(
     cpu_stalls
     COMPONENTS
         papi_tuple<PAPI_MEM_SCY,PAPI_MEM_RCY,PAPI_MEM_WCY,PAPI_RES_STL,PAPI_FP_STAL>
     TARGETS timemory::timemory-papi)
 
-add_papi_connector_config(
+timemory_add_papi_connector_config(
     cpu_l1_misses
     COMPONENTS papi_tuple<PAPI_L1_DCM,PAPI_L1_ICM,PAPI_L1_TCM,PAPI_L1_LDM,PAPI_L1_STM>
     TARGETS timemory::timemory-papi)
 
-add_papi_connector_config(
+timemory_add_papi_connector_config(
     cpu_l2_misses
     COMPONENTS papi_tuple<PAPI_L2_DCM,PAPI_L2_ICM,PAPI_L2_TCM,PAPI_L2_LDM,PAPI_L2_STM>
     TARGETS timemory::timemory-papi)
 
-add_papi_connector_config(
+timemory_add_papi_connector_config(
     cpu_l3_misses
     COMPONENTS papi_tuple<PAPI_L3_DCM,PAPI_L3_ICM,PAPI_L3_TCM,PAPI_L3_LDM,PAPI_L3_STM>
     TARGETS timemory::timemory-papi)
 
-add_papi_connector_config(
+timemory_add_papi_connector_config(
     cpu_l1_total
     COMPONENTS papi_tuple<PAPI_L1_TCM,PAPI_L1_TCH,PAPI_L1_TCA,PAPI_L1_TCR,PAPI_L1_TCW>
     TARGETS timemory::timemory-papi)
 
-add_papi_connector_config(
+timemory_add_papi_connector_config(
     cpu_l2_total
     COMPONENTS papi_tuple<PAPI_L2_TCM,PAPI_L2_TCH,PAPI_L2_TCA,PAPI_L2_TCR,PAPI_L2_TCW>
     TARGETS timemory::timemory-papi)
 
-add_papi_connector_config(
+timemory_add_papi_connector_config(
     cpu_l3_total
     COMPONENTS papi_tuple<PAPI_L3_TCM,PAPI_L3_TCH,PAPI_L3_TCA,PAPI_L3_TCR,PAPI_L3_TCW>
     TARGETS timemory::timemory-papi)
 
-add_connector_config(
+timemory_add_connector_config(
     cuda_profiler
     CONDITION "${TIMEMORY_USE_CUDA}"
     COMPONENTS nvtx_marker
     TARGETS timemory::timemory-cuda-component)
 
-add_connector_config(
+timemory_add_connector_config(
     cuda_event
     CONDITION "${TIMEMORY_USE_CUDA}"
     COMPONENTS cuda_event
     TARGETS timemory::timemory-cuda-component)
 
-add_connector_config(
+timemory_add_connector_config(
     cuda_activity
     CONDITION "${TIMEMORY_USE_CUPTI}"
     COMPONENTS cupti_activity
     TARGETS timemory::timemory-cupti-component)
 
-add_connector_config(
+timemory_add_connector_config(
     cuda_hw_counters
     CONDITION "${TIMEMORY_USE_CUPTI}"
     COMPONENTS cupti_counters
     TARGETS timemory::timemory-cupti-component)
 
-add_connector_config(
+timemory_add_connector_config(
     gpu_roofline
     CONDITION "${TIMEMORY_USE_CUPTI}"
     GPU
@@ -539,7 +540,7 @@ add_connector_config(
     TARGETS timemory::timemory-ert timemory::timemory-gpu-roofline
             timemory::timemory-cupti-component timemory::timemory-roofline-component)
 
-add_connector_config(
+timemory_add_connector_config(
     gpu_instructions
     CONDITION "${TIMEMORY_USE_CUPTI}"
     COMPONENTS cupti_counters
@@ -547,7 +548,7 @@ add_connector_config(
         "TIMEMORY_CUPTI_METRICS=inst_issued,inst_executed,thread_inst_executed,ldst_executed,inst_integer,inst_fp_16,inst_fp_32,inst_fp_64,inst_inter_thread_communication"
     TARGETS timemory::timemory-cupti-component)
 
-add_connector_config(
+timemory_add_connector_config(
     gpu_cache_misses
     CONDITION "${TIMEMORY_USE_CUPTI}"
     COMPONENTS cupti_counters
@@ -555,14 +556,14 @@ add_connector_config(
         "TIMEMORY_CUPTI_METRICS=tex_cache_transactions,tex_cache_hit_rate,tex0_cache_sector_queries,tex0_cache_sector_misses,tex1_cache_sector_queries,tex1_cache_sector_misses,l2_tex_hit_rate,dram_read_bytes,dram_write_bytes"
     TARGETS timemory::timemory-cupti-component)
 
-add_connector_config(
+timemory_add_connector_config(
     gpu_branching
     CONDITION "${TIMEMORY_USE_CUPTI}"
     COMPONENTS cupti_counters
     ENVIRONMENT "TIMEMORY_CUPTI_METRICS=divergent_branch,branch,branch_efficiency"
     TARGETS timemory::timemory-cupti-component)
 
-add_connector_config(
+timemory_add_connector_config(
     gpu_stalls
     CONDITION "${TIMEMORY_USE_CUPTI}"
     COMPONENTS cupti_counters
@@ -570,7 +571,7 @@ add_connector_config(
         "TIMEMORY_CUPTI_METRICS=stall_inst_fetch,stall_exec_dependency,stall_memory_dependency,stall_texture,stall_sync,stall_other,stall_constant_memory_dependency,stall_pipe_busy,stall_memory_throttle,stall_not_selected"
     TARGETS timemory::timemory-cupti-component)
 
-add_connector_config(
+timemory_add_connector_config(
     gpu_l2_total
     CONDITION "${TIMEMORY_USE_CUPTI}"
     COMPONENTS cupti_counters
@@ -578,7 +579,7 @@ add_connector_config(
         "TIMEMORY_CUPTI_METRICS=l2_read_transactions,l2_write_transactions,l2_atomic_transactions,l2_global_load_bytes,l2_local_load_bytes,l2_local_global_store_bytes,l2_global_reduction_bytes,l2_global_atomic_store_bytes"
     TARGETS timemory::timemory-cupti-component)
 
-add_connector_config(
+timemory_add_connector_config(
     gpu_efficiency
     CONDITION "${TIMEMORY_USE_CUPTI}"
     COMPONENTS cupti_counters
@@ -586,14 +587,14 @@ add_connector_config(
         "TIMEMORY_CUPTI_METRICS=branch_efficiency,warp_execution_efficiency,warp_nonpred_execution_efficiency,gld_efficiency,gst_efficiency,shared_efficiency,sm_efficiency,flop_hp_efficiency,flop_sp_efficiency,flop_dp_efficiency"
     TARGETS timemory::timemory-cupti-component)
 
-add_connector_config(
+timemory_add_connector_config(
     gpu_ipc
     CONDITION "${TIMEMORY_USE_CUPTI}"
     COMPONENTS cupti_counters
     ENVIRONMENT "TIMEMORY_CUPTI_METRICS=ipc,issued_ipc"
     TARGETS timemory::timemory-cupti-component)
 
-add_connector_config(
+timemory_add_connector_config(
     gpu_warps
     CONDITION "${TIMEMORY_USE_CUPTI}"
     COMPONENTS cupti_counters
@@ -601,7 +602,7 @@ add_connector_config(
         "TIMEMORY_CUPTI_METRICS=warps_launched,active_warps,inst_per_warp,warp_execution_efficiency,warp_nonpred_execution_efficiency,unique_warps_launched,eligible_warps_per_cycle"
     TARGETS timemory::timemory-cupti-component)
 
-add_connector_config(
+timemory_add_connector_config(
     gpu_double_flops
     CONDITION "${TIMEMORY_USE_CUPTI}"
     COMPONENTS cupti_counters
@@ -609,7 +610,7 @@ add_connector_config(
         "TIMEMORY_CUPTI_METRICS=flop_count_dp,flop_count_dp_add,flop_count_dp_fma,flop_count_dp_mul,flop_dp_efficiency"
     TARGETS timemory::timemory-cupti-component)
 
-add_connector_config(
+timemory_add_connector_config(
     gpu_single_flops
     CONDITION "${TIMEMORY_USE_CUPTI}"
     COMPONENTS cupti_counters
@@ -617,7 +618,7 @@ add_connector_config(
         "TIMEMORY_CUPTI_METRICS=flop_count_sp,flop_count_sp_add,flop_count_sp_fma,flop_count_sp_mul,flop_count_sp_special,flop_sp_efficiency"
     TARGETS timemory::timemory-cupti-component)
 
-add_connector_config(
+timemory_add_connector_config(
     gpu_half_flops
     CONDITION "${TIMEMORY_USE_CUPTI}"
     COMPONENTS cupti_counters
@@ -625,25 +626,25 @@ add_connector_config(
         "TIMEMORY_CUPTI_METRICS=flop_count_hp,flop_count_hp_add,flop_count_hp_mul,flop_count_hp_fma,flop_hp_efficiency"
     TARGETS timemory::timemory-cupti-component)
 
-add_connector_config(
+timemory_add_connector_config(
     vtune
     CONDITION "${TIMEMORY_USE_VTUNE}"
     COMPONENTS vtune_profiler vtune_frame vtune_event
     TARGETS timemory::timemory-vtune)
 
-add_connector_config(
+timemory_add_connector_config(
     caliper
     CONDITION "${TIMEMORY_USE_CALIPER}"
     COMPONENTS caliper_config caliper_marker
     TARGETS timemory::timemory-caliper)
 
-add_connector_config(
+timemory_add_connector_config(
     likwid
     CONDITION "${TIMEMORY_USE_LIKWID}"
     COMPONENTS likwid_marker likwid_nvmarker
     TARGETS timemory::timemory-likwid)
 
-add_connector_config(
+timemory_add_connector_config(
     tau
     CONDITION "${TIMEMORY_USE_TAU}"
     COMPONENTS tau_marker
@@ -656,7 +657,7 @@ else()
     set(USE_OMPT OFF)
 endif()
 
-add_connector_config(
+timemory_add_connector_config(
     ompt
     CONDITION "${USE_OMPT}"
     COMPONENTS ompt_handle<tim::project::timemory>
