--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
             bash ${HOME}/miniconda.sh -b -p ${HOME}/miniconda &&
             export PATH="${HOME}/miniconda/bin:${PATH}" &&
             conda config --set always_yes yes &&
-            conda create -c conda-forge -c defaults -n timemory-ci python=3.7 scikit-build ninja cython matplotlib pillow six pandas pydot multiprocess pip &&
+            conda create -c defaults -c conda-forge -n timemory-ci python=3.7 scikit-build ninja cython matplotlib pillow six pandas pydot multiprocess pip &&
             source activate timemory-ci &&
             python -m pip install -r requirements.txt
       - run:
