--- a/source/tests/scripts/launch-process.sh.in
+++ b/source/tests/scripts/launch-process.sh.in
@@ -32,7 +32,7 @@ emit-separator "Analyzing results in ${TIMEMORY_OUTPUT_PATH}"
 
 find ${TIMEMORY_OUTPUT_PATH}
 
-WALL_FILE="${TIMEMORY_OUTPUT_PATH}/${TIMEMORY_OUTPUT_PREFIX}-wall.txt"
+WALL_FILE="${TIMEMORY_OUTPUT_PATH}/${TIMEMORY_OUTPUT_PREFIX}-wall_clock.txt"
 
 echo "WALL_FILE: ${WALL_FILE}"
 
