--- a/source/tests/scripts/binary-rewrite-regex.sh.in
+++ b/source/tests/scripts/binary-rewrite-regex.sh.in
@@ -35,7 +35,7 @@ emit-separator "Executing instrumented binary"
 
 emit-separator "Analyzing results in ${TIMEMORY_OUTPUT_PATH}"
 
-WALL_FILE="${TIMEMORY_OUTPUT_PATH}/${TIMEMORY_OUTPUT_PREFIX}-wall.txt"
+WALL_FILE="${TIMEMORY_OUTPUT_PATH}/${TIMEMORY_OUTPUT_PREFIX}-wall_clock.txt"
 if [ ! -f "${WALL_FILE}" ]; then
     echo -e "Missing wall-clock output file: \"${WALL_FILE}\""
     echo -e "File in ${TIMEMORY_OUTPUT_PATH}:\n$(ls ${TIMEMORY_OUTPUT_PATH})"
